--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- Ibtehaz Utsay -->
 <!-- Custom Elements: <audio>, <canvas> , <figcaption> -->
 <!-- Custom Attributes: loop, controls, hidden -->
+<!-- Live website deployed on https://comp484-p1.netlify.app/ -->
+<!-- Github Repo: https://github.com/ibtehaz/comp484-p1 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -35,7 +37,6 @@
           <li><a href="news.html" title="News">News</a></li>
           <li><a href="timeline.html" title="Timeline">Timeline</a></li>
           <li><a href="media.html" title="Media">Media</a></li>
-          <li><a href="contact.html" title="Contact">Contact Us</a></li>
         </ul>
       </nav>
     </header>
