--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>
           With the average annual cost of running a team - designing, building,
           and maintaining cars, pay, transport - being approximately US$247
-          million,[7] its financial and political battles are widely reported.
+          million, its financial and political battles are widely reported.
           On 23 January 2017, Liberty Media completed the acquisition of the
           Formula One Group, from private-equity firm CVC Capital Partners for
           $8 billion.
