--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
     </header>
 
     <main role="main">
-        <!-- Using custom element figcaption below -->
-        <figure>
-            <img src="https://storage.googleapis.com/wtf1-com.appspot.com/1/20180115-deeda7dde4ac87038bd2c091855c4212.jpeg" alt="">
-            <figcaption>Welcome to Formula One</figcaption>
-        </figure>
+      <!-- Using custom element figcaption below -->
+      <figure>
+        <img
+          src="https://storage.googleapis.com/wtf1-com.appspot.com/1/20180115-deeda7dde4ac87038bd2c091855c4212.jpeg"
+          alt=""
+        />
+        <figcaption>Welcome to Formula One</figcaption>
+      </figure>
       <article role="article">
-          
         <p>
           Formula One (also known as <strong>Formula 1</strong> or
           <strong>F1</strong>) is the highest class of international racing for
@@ -88,29 +90,32 @@
         <p>
           With the average annual cost of running a team - designing, building,
           and maintaining cars, pay, transport - being approximately US$247
-          million, its financial and political battles are widely reported.
-          On 23 January 2017, Liberty Media completed the acquisition of the
+          million, its financial and political battles are widely reported. On
+          23 January 2017, Liberty Media completed the acquisition of the
           Formula One Group, from private-equity firm CVC Capital Partners for
           $8 billion.
         </p>
       </article>
     </main>
     <footer role="contentinfo">
-        <p>
-            <a href="http://www.f1tv.com" title="F1TV.com" target="_blank"
-              >F1 Official Website</a
-            >
-          </p>
-          <p>
-            <a href="https://twitter.com/F1" title="F1 Twitter" target="_blank"
-              >F1 Twitter</a
-            >
-          </p>
-          <p>
-            <a href="https://www.instagram.com/f1" title="F1 Instagram" target="_blank"
-              >F1 Instagram</a
-            >
-          </p>
+      <p>
+        <a href="http://www.f1tv.com" title="F1TV.com" target="_blank"
+          >F1 Official Website</a
+        >
+      </p>
+      <p>
+        <a href="https://twitter.com/F1" title="F1 Twitter" target="_blank"
+          >F1 Twitter</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://www.instagram.com/f1"
+          title="F1 Instagram"
+          target="_blank"
+          >F1 Instagram</a
+        >
+      </p>
     </footer>
   </body>
 </html>
