--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Ibtehaz Utsay -->
 <!-- Custom Elements: <audio>, <canvas> , <figcaption> -->
 <!-- Custom Attributes: loop, controls, hidden -->
-<!-- Live website deployed on https://comp484-p1.netlify.app/ -->
+<!-- Live website deployed and hosted on https://comp484-p1.netlify.app/ -->
 <!-- Github Repo: https://github.com/ibtehaz/comp484-p1 -->
 
 <!DOCTYPE html>
