--- a/media.html
+++ b/media.html
@@ -64,7 +64,7 @@
             >
           </p>
           <!-- Using custom attribute hidden -->
-          <p hidden><a href="https://www.linkedin.com/f1" title="F1 LinkedIn" target="_blank"
+          <p><a href="https://www.linkedin.com/f1" title="F1 LinkedIn" target="_blank"
             >This link is hidden</a</p>
       </footer>
 
